<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/dateButton"
            android:layout_alignParentRight="true"
            android:text="@string/wo_started"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="setDate" />

        <TextView
            android:id="@+id/wo_startedTextView"
            android:textAlignment="gravity"
            android:text="today maybe "
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_ups"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/push_up_spinner1"
            android:entries="@array/pushup_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/push_up_spinner2"
            android:entries="@array/pushup_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/push_up_spinner3"
            android:entries="@array/pushup_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sit_ups"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sit_up_spinner1"
            android:entries="@array/situp_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sit_up_spinner2"
            android:entries="@array/situp_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sit_up_spinner3"
            android:entries="@array/situp_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curls"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curl_spinner1"
            android:entries="@array/curl_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curl_spinner2"
            android:entries="@array/curl_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curl_spinner3"
            android:entries="@array/curl_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overheads"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overhead_spinner1"
            android:entries="@array/overhead_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overhead_spinner2"
            android:entries="@array/overhead_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overhead_spinner3"
            android:entries="@array/overhead_choices"
            android:textAlignment="gravity"
            android:gravity="center">
        </Spinner>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_workout"
            android:onClick="recordWorkout"
            android:padding="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="cancelRecordWorkout"
            android:padding="@dimen/activity_horizontal_margin"/>

    </LinearLayout>
</LinearLayout>